// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ResourceCard - Snapshots > matches the five-tag card snapshot 1`] = `
<div
  class="mx-auto w-full flex-col flex gap-3 rounded-lg border border-border/60 p-4"
  data-surface="resource-card"
  data-testid="container"
>
  <a
    class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm block rounded-md"
    href="/resources/resource-1"
  >
    <div
      class="gap-2"
      data-testid="container"
    >
      <h2
        class="text-2xl text-foreground font-medium"
        data-testid="typography"
      >
        Example resource
      </h2>
      <p
        class="text-sm font-medium line-clamp-3 text-muted-foreground"
        data-testid="typography"
      >
        A useful example resource.
      </p>
    </div>
  </a>
  <div
    class="flex flex-wrap items-center gap-2"
    data-testid="container"
  >
    <a
      href="/resources/tag/one"
    >
      <button
        aria-label="one tag (1 posts)"
        aria-pressed="false"
        class="cursor-pointer inline-flex items-center justify-center bg-transparent focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 min-w-9 group/tag relative h-8 max-w-full gap-1 rounded-md px-3 backdrop-blur-lg border-0 text-sm leading-5 font-bold text-white subpixel-antialiased transition-all duration-200 hover:bg-transparent hover:text-white data-[state=on]:border data-[state=on]:border-solid data-[state=on]:bg-transparent data-[state=on]:text-white"
        data-cy="post-tag"
        data-state="off"
        data-tag-label="one"
        style="background-image: linear-gradient(90deg, rgba(5, 5, 10, 0.7) 0%, rgba(5, 5, 10, 0.7) 100%), linear-gradient(90deg, rgb(0, 102, 255) 0%, rgb(0, 102, 255) 100%);"
        type="button"
      >
        <div
          class="flex h-8 w-fit max-w-full min-w-0 cursor-pointer items-center justify-between rounded-md transition-all duration-200 px-0"
          data-cy="tag"
          data-testid="tag"
          style="background-color: transparent; border: medium; box-shadow: none;"
          title="one"
        >
          <p
            class="text-sm text-foreground truncate font-bold"
            data-cy="tag-name"
            data-testid="tag-name"
          >
            one
          </p>
          <p
            class="text-sm ml-1.5 shrink-0 font-medium text-foreground/50"
            data-cy="post-tag-count"
            data-testid="tag-count"
          >
            1
          </p>
        </div>
        <span
          aria-hidden="true"
          class="pointer-events-none absolute inset-0 rounded-md opacity-0 transition-opacity group-hover/tag:opacity-100"
          style="box-shadow: inset 0px 0px 8px 0px #0066FF;"
        />
      </button>
    </a>
    <a
      href="/resources/tag/two"
    >
      <button
        aria-label="two tag (1 posts)"
        aria-pressed="false"
        class="cursor-pointer inline-flex items-center justify-center bg-transparent focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 min-w-9 group/tag relative h-8 max-w-full gap-1 rounded-md px-3 backdrop-blur-lg border-0 text-sm leading-5 font-bold text-white subpixel-antialiased transition-all duration-200 hover:bg-transparent hover:text-white data-[state=on]:border data-[state=on]:border-solid data-[state=on]:bg-transparent data-[state=on]:text-white"
        data-cy="post-tag"
        data-state="off"
        data-tag-label="two"
        style="background-image: linear-gradient(90deg, rgba(5, 5, 10, 0.7) 0%, rgba(5, 5, 10, 0.7) 100%), linear-gradient(90deg, rgb(0, 76, 255) 0%, rgb(0, 76, 255) 100%);"
        type="button"
      >
        <div
          class="flex h-8 w-fit max-w-full min-w-0 cursor-pointer items-center justify-between rounded-md transition-all duration-200 px-0"
          data-cy="tag"
          data-testid="tag"
          style="background-color: transparent; border: medium; box-shadow: none;"
          title="two"
        >
          <p
            class="text-sm text-foreground truncate font-bold"
            data-cy="tag-name"
            data-testid="tag-name"
          >
            two
          </p>
          <p
            class="text-sm ml-1.5 shrink-0 font-medium text-foreground/50"
            data-cy="post-tag-count"
            data-testid="tag-count"
          >
            1
          </p>
        </div>
        <span
          aria-hidden="true"
          class="pointer-events-none absolute inset-0 rounded-md opacity-0 transition-opacity group-hover/tag:opacity-100"
          style="box-shadow: inset 0px 0px 8px 0px #004cFF;"
        />
      </button>
    </a>
    <a
      href="/resources/tag/three"
    >
      <button
        aria-label="three tag (1 posts)"
        aria-pressed="false"
        class="cursor-pointer inline-flex items-center justify-center bg-transparent focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 min-w-9 group/tag relative h-8 max-w-full gap-1 rounded-md px-3 backdrop-blur-lg border-0 text-sm leading-5 font-bold text-white subpixel-antialiased transition-all duration-200 hover:bg-transparent hover:text-white data-[state=on]:border data-[state=on]:border-solid data-[state=on]:bg-transparent data-[state=on]:text-white"
        data-cy="post-tag"
        data-state="off"
        data-tag-label="three"
        style="background-image: linear-gradient(90deg, rgba(5, 5, 10, 0.7) 0%, rgba(5, 5, 10, 0.7) 100%), linear-gradient(90deg, rgb(158, 255, 0) 0%, rgb(158, 255, 0) 100%);"
        type="button"
      >
        <div
          class="flex h-8 w-fit max-w-full min-w-0 cursor-pointer items-center justify-between rounded-md transition-all duration-200 px-0"
          data-cy="tag"
          data-testid="tag"
          style="background-color: transparent; border: medium; box-shadow: none;"
          title="three"
        >
          <p
            class="text-sm text-foreground truncate font-bold"
            data-cy="tag-name"
            data-testid="tag-name"
          >
            three
          </p>
          <p
            class="text-sm ml-1.5 shrink-0 font-medium text-foreground/50"
            data-cy="post-tag-count"
            data-testid="tag-count"
          >
            1
          </p>
        </div>
        <span
          aria-hidden="true"
          class="pointer-events-none absolute inset-0 rounded-md opacity-0 transition-opacity group-hover/tag:opacity-100"
          style="box-shadow: inset 0px 0px 8px 0px #9eFF00;"
        />
      </button>
    </a>
    <a
      href="/resources/tag/four"
    >
      <button
        aria-label="four tag (1 posts)"
        aria-pressed="false"
        class="cursor-pointer inline-flex items-center justify-center bg-transparent focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 min-w-9 group/tag relative h-8 max-w-full gap-1 rounded-md px-3 backdrop-blur-lg border-0 text-sm leading-5 font-bold text-white subpixel-antialiased transition-all duration-200 hover:bg-transparent hover:text-white data-[state=on]:border data-[state=on]:border-solid data-[state=on]:bg-transparent data-[state=on]:text-white"
        data-cy="post-tag"
        data-state="off"
        data-tag-label="four"
        style="background-image: linear-gradient(90deg, rgba(5, 5, 10, 0.7) 0%, rgba(5, 5, 10, 0.7) 100%), linear-gradient(90deg, rgb(255, 0, 38) 0%, rgb(255, 0, 38) 100%);"
        type="button"
      >
        <div
          class="flex h-8 w-fit max-w-full min-w-0 cursor-pointer items-center justify-between rounded-md transition-all duration-200 px-0"
          data-cy="tag"
          data-testid="tag"
          style="background-color: transparent; border: medium; box-shadow: none;"
          title="four"
        >
          <p
            class="text-sm text-foreground truncate font-bold"
            data-cy="tag-name"
            data-testid="tag-name"
          >
            four
          </p>
          <p
            class="text-sm ml-1.5 shrink-0 font-medium text-foreground/50"
            data-cy="post-tag-count"
            data-testid="tag-count"
          >
            1
          </p>
        </div>
        <span
          aria-hidden="true"
          class="pointer-events-none absolute inset-0 rounded-md opacity-0 transition-opacity group-hover/tag:opacity-100"
          style="box-shadow: inset 0px 0px 8px 0px #FF0026;"
        />
      </button>
    </a>
    <a
      href="/resources/tag/five"
    >
      <button
        aria-label="five tag (1 posts)"
        aria-pressed="false"
        class="cursor-pointer inline-flex items-center justify-center bg-transparent focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 min-w-9 group/tag relative h-8 max-w-full gap-1 rounded-md px-3 backdrop-blur-lg border-0 text-sm leading-5 font-bold text-white subpixel-antialiased transition-all duration-200 hover:bg-transparent hover:text-white data-[state=on]:border data-[state=on]:border-solid data-[state=on]:bg-transparent data-[state=on]:text-white"
        data-cy="post-tag"
        data-state="off"
        data-tag-label="five"
        style="background-image: linear-gradient(90deg, rgba(5, 5, 10, 0.7) 0%, rgba(5, 5, 10, 0.7) 100%), linear-gradient(90deg, rgb(255, 0, 178) 0%, rgb(255, 0, 178) 100%);"
        type="button"
      >
        <div
          class="flex h-8 w-fit max-w-full min-w-0 cursor-pointer items-center justify-between rounded-md transition-all duration-200 px-0"
          data-cy="tag"
          data-testid="tag"
          style="background-color: transparent; border: medium; box-shadow: none;"
          title="five"
        >
          <p
            class="text-sm text-foreground truncate font-bold"
            data-cy="tag-name"
            data-testid="tag-name"
          >
            five
          </p>
          <p
            class="text-sm ml-1.5 shrink-0 font-medium text-foreground/50"
            data-cy="post-tag-count"
            data-testid="tag-count"
          >
            1
          </p>
        </div>
        <span
          aria-hidden="true"
          class="pointer-events-none absolute inset-0 rounded-md opacity-0 transition-opacity group-hover/tag:opacity-100"
          style="box-shadow: inset 0px 0px 8px 0px #FF00b2;"
        />
      </button>
    </a>
    <p
      class="text-sm font-medium self-center text-muted-foreground"
      data-testid="typography"
    >
      More tags
    </p>
  </div>
  <a
    class="cursor-pointer hover:text-brand/80 transition-colors text-sm text-brand"
    href="https://example.com/resource"
    rel="noopener noreferrer"
    target="_blank"
  >
    example.com/resource
  </a>
</div>
`;

exports[`ResourceCard - Snapshots > matches the metadata card snapshot 1`] = `
<div
  class="mx-auto w-full flex-col flex gap-3 rounded-lg border border-border/60 p-4"
  data-surface="resource-card"
  data-testid="container"
>
  <a
    class="cursor-pointer hover:text-brand/80 transition-colors text-brand text-sm block rounded-md"
    href="/resources/resource-1"
  >
    <div
      class="gap-2"
      data-testid="container"
    >
      <h2
        class="text-2xl text-foreground font-medium"
        data-testid="typography"
      >
        Example resource
      </h2>
      <p
        class="text-sm font-medium line-clamp-3 text-muted-foreground"
        data-testid="typography"
      >
        A useful example resource.
      </p>
    </div>
  </a>
  <div
    class="flex flex-wrap items-center gap-2"
    data-testid="container"
  >
    <a
      href="/resources/tag/docs"
    >
      <button
        aria-label="docs tag (1 posts)"
        aria-pressed="false"
        class="cursor-pointer inline-flex items-center justify-center bg-transparent focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 min-w-9 group/tag relative h-8 max-w-full gap-1 rounded-md px-3 backdrop-blur-lg border-0 text-sm leading-5 font-bold text-white subpixel-antialiased transition-all duration-200 hover:bg-transparent hover:text-white data-[state=on]:border data-[state=on]:border-solid data-[state=on]:bg-transparent data-[state=on]:text-white"
        data-cy="post-tag"
        data-state="off"
        data-tag-label="docs"
        style="background-image: linear-gradient(90deg, rgba(5, 5, 10, 0.7) 0%, rgba(5, 5, 10, 0.7) 100%), linear-gradient(90deg, rgb(0, 255, 59) 0%, rgb(0, 255, 59) 100%);"
        type="button"
      >
        <div
          class="flex h-8 w-fit max-w-full min-w-0 cursor-pointer items-center justify-between rounded-md transition-all duration-200 px-0"
          data-cy="tag"
          data-testid="tag"
          style="background-color: transparent; border: medium; box-shadow: none;"
          title="docs"
        >
          <p
            class="text-sm text-foreground truncate font-bold"
            data-cy="tag-name"
            data-testid="tag-name"
          >
            docs
          </p>
          <p
            class="text-sm ml-1.5 shrink-0 font-medium text-foreground/50"
            data-cy="post-tag-count"
            data-testid="tag-count"
          >
            1
          </p>
        </div>
        <span
          aria-hidden="true"
          class="pointer-events-none absolute inset-0 rounded-md opacity-0 transition-opacity group-hover/tag:opacity-100"
          style="box-shadow: inset 0px 0px 8px 0px #00FF3b;"
        />
      </button>
    </a>
  </div>
  <a
    class="cursor-pointer hover:text-brand/80 transition-colors text-sm text-brand"
    href="https://example.com/resource"
    rel="noopener noreferrer"
    target="_blank"
  >
    example.com/resource
  </a>
</div>
`;
